<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_account"
    app:startDestination="@id/accountFragment">

    <fragment
        android:id="@+id/accountFragment"
        android:name="com.abdelrahmman.bottomnavigationview.ui.account.AccountFragment"
        android:label="@string/fragment_account" >

        <action
            android:id="@+id/action_accountFragment_to_editAccountFragment"
            app:destination="@id/editAccountFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />

        <action
            android:id="@+id/action_accountFragment_to_viewAccountFragment"
            app:destination="@id/viewAccountFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>

    </fragment>

    <fragment
        android:id="@+id/editAccountFragment"
        android:name="com.abdelrahmman.bottomnavigationview.ui.account.EditAccountFragment"
        android:label="@string/fragment_edit_account" >

        <action
            android:id="@+id/action_editAccountFragment_to_editSuccessFragment"
            app:destination="@id/editSuccessFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>

        <action
            android:id="@+id/action_editAccountFragment_to_accountFragment"
            app:destination="@id/accountFragment"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popUpTo="@id/nav_account"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/viewAccountFragment"
        android:name="com.abdelrahmman.bottomnavigationview.ui.account.ViewAccountFragment"
        android:label="@string/fragment_view_account" >

        <action
            android:id="@+id/action_viewAccountFragment_to_accountFragment"
            app:destination="@id/accountFragment"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popUpTo="@id/nav_account"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/editSuccessFragment"
        android:name="com.abdelrahmman.bottomnavigationview.ui.account.EditSuccessFragment"
        android:label="@string/fragment_edit_success" >

        <action
            android:id="@+id/action_editSuccessFragment_to_accountFragment"
            app:destination="@id/accountFragment"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popUpTo="@id/nav_account"
            app:popUpToInclusive="true" />

    </fragment>

</navigation>